# pyarrow-feedstock

pypi/: build_arrow.sh  build_pyarrow.sh  build_wheel.sh  pyproject.toml
