# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "setuptools",
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "arrow-cpp-parquet-pyarrow"
version = "15.0.1"

#One line description
description = "Provides arrow-cpp,pyarrow,parquet packaging"

#Classifiers to improve pacakage discoverability
classifiers = [
  "Programming Language :: C++, python",
]

#Project URLs
[project.urls]
homepage = "https://arrow.apache.org"
upstream = "https://github.com/apache/arrow"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

[options]
install_requires = "importlib-metadata ~= 1.0 ; python_version > '3.9'"

[tool.setuptools.package-data]
arrowcpp = ["lib/*", "lib/pkgconfig/*", "lib/cmake/Arrow/*", "include/*"]
pyarrow = ["*.pxd", "*.pyx", "includes/*.pxd"]
parquet = ["*"]
